non-msrv-tests/tests/ui/missing_default.stderr
error: `enum`s require specifying a `default` option to implement `Default`
 --> tests/ui/missing_default.rs:2:1
  |
2 | / enum Test<T> {
3 | |     A(T),
4 | | }
  | |_^
